Modeling in progress

--- a/notebooks/01_data_preprocessing.ipynb
+++ b/notebooks/01_data_preprocessing.ipynb
@@ -35,7 +35,7 @@
    "id": "73f8380a-791b-4d26-8064-64596a8cecca",
    "metadata": {},
    "source": [
-    "### Wczytanie wszystkich plików CSV do jednego DataFrame"
+    "## Wczytanie wszystkich plików CSV do jednego DataFrame"
    ]
   },
   {
@@ -62,7 +62,7 @@
    "id": "f93ad5a8-a529-4035-933f-4ba2333d0055",
    "metadata": {},
    "source": [
-    "### Wstępna selekcja danych\n",
+    "## Wstępna selekcja danych\n",
     "Usuwam obserwacje z brakami w kolumnie OBS_VALUE oraz obserwacje, które wprawdzie mają dane, ale są oflagowane jako 'b' (\"break in time series\") - są one często nieprawidłowe lub ze złą jednostką."
    ]
   },
@@ -83,7 +83,7 @@
    "id": "a27d7cc1-76e2-44f3-859a-8bd188ec731f",
    "metadata": {},
    "source": [
-    "### Wybór najnowszego roku dla każdego miasta i wskaźnika\n",
+    "## Wybór najnowszego roku dla każdego miasta i wskaźnika\n",
     "Pomiary/badania były przeprowadzane w różnych miastach w różnym czasie. Do celów zadania wybieram zawsze najświeższe dostępne dane."
    ]
   },
@@ -127,7 +127,7 @@
    "id": "482de881-2ddd-4e0e-b8d1-6da95e65e4cd",
    "metadata": {},
    "source": [
-    "### Zmiana nazw kolumn"
+    "## Zmiana nazw kolumn"
    ]
   },
   {
@@ -181,7 +181,7 @@
    "id": "9d95fe37-5f31-4336-a282-796b288cf871",
    "metadata": {},
    "source": [
-    "### Konwersja typów kolumn"
+    "## Konwersja typów kolumn"
    ]
   },
   {
@@ -731,14 +731,14 @@
    "id": "15547ab7-a179-427e-9290-f3b24e532c50",
    "metadata": {},
    "source": [
-    "### Poprawianie zmiennych\n",
+    "## Poprawianie zmiennych\n",
     "Śmiertelność noworodków: Analiza wartości odstających sugeruje błąd w jednostkach – dane prawdopodobnie wprowadzono w przeliczeniu na 1 mln zamiast na 1 tys. urodzeń. Wymagana jest rekalibracja skali.\n",
     "Problemy układu oddechowego: Liczba zgonów z przyczyn oddechowych została zestawiona z całkowitą populacją w celu uzyskania wskaźnika relatywnego."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "4a79f172-38ce-435e-97aa-b1ade255f31b",
    "metadata": {},
    "outputs": [],
@@ -760,6 +760,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "15761b14-e7ec-4e3d-8a0a-3f83a0841f32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['City'] = df['City'].str.replace(' (greater city)', '')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "b3d9ff06-535e-4d3d-8b7a-17dcf7ed9567",
    "metadata": {},
@@ -773,7 +783,7 @@
    "id": "1284d488-8813-4cf9-83f8-617e61d7df47",
    "metadata": {},
    "source": [
-    "### Zapisanie danych"
+    "## Zapisanie danych"
    ]
   },
   {
@@ -850,7 +860,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>'s-Gravenhage (greater city)</td>\n",
+       "      <td>'s-Gravenhage</td>\n",
        "      <td>61.1</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -920,7 +930,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>A Coruña (greater city)</td>\n",
+       "      <td>A Coruña</td>\n",
        "      <td>67.9</td>\n",
        "      <td>NaN</td>\n",
        "      <td>85.28</td>\n",
@@ -1060,7 +1070,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Acireale (greater city)</td>\n",
+       "      <td>Acireale</td>\n",
        "      <td>63.9</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1410,7 +1420,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>Alicante/Alacant (greater city)</td>\n",
+       "      <td>Alicante/Alacant</td>\n",
        "      <td>62.9</td>\n",
        "      <td>NaN</td>\n",
        "      <td>85.53</td>\n",
@@ -1445,7 +1455,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>Alkmaar (greater city)</td>\n",
+       "      <td>Alkmaar</td>\n",
        "      <td>73.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1553,27 +1563,27 @@
        "</div>"
       ],
       "text/plain": [
-       "                               City  Age_dependency_ratio  NO2_avg_conc  \\\n",
-       "0      's-Gravenhage (greater city)                  61.1           NaN   \n",
-       "1                  's-Hertogenbosch                  63.8           NaN   \n",
-       "2           A Coruña (greater city)                  67.9           NaN   \n",
-       "3                            Aachen                  54.1           NaN   \n",
-       "4                           Aalborg                  63.5           NaN   \n",
-       "5                          Aberdeen                  53.0           NaN   \n",
-       "6           Acireale (greater city)                  63.9           NaN   \n",
-       "7                             Adana                   NaN           NaN   \n",
-       "8                   Aix-en-Provence                  67.4           NaN   \n",
-       "9                        Alba Iulia                  48.8           NaN   \n",
-       "10                         Albacete                  59.3           NaN   \n",
-       "11               Alcalá de Guadaíra                  63.3           NaN   \n",
-       "12                Alcalá de Henares                  59.1           NaN   \n",
-       "13                            Alcoy                  66.5           NaN   \n",
-       "14                      Alessandria                  71.4           NaN   \n",
-       "15                        Algeciras                  63.0           NaN   \n",
-       "16  Alicante/Alacant (greater city)                  62.9           NaN   \n",
-       "17           Alkmaar (greater city)                  73.0           NaN   \n",
-       "18                           Almelo                  72.8           NaN   \n",
-       "19                           Almere                  58.8           NaN   \n",
+       "                  City  Age_dependency_ratio  NO2_avg_conc  \\\n",
+       "0        's-Gravenhage                  61.1           NaN   \n",
+       "1     's-Hertogenbosch                  63.8           NaN   \n",
+       "2             A Coruña                  67.9           NaN   \n",
+       "3               Aachen                  54.1           NaN   \n",
+       "4              Aalborg                  63.5           NaN   \n",
+       "5             Aberdeen                  53.0           NaN   \n",
+       "6             Acireale                  63.9           NaN   \n",
+       "7                Adana                   NaN           NaN   \n",
+       "8      Aix-en-Provence                  67.4           NaN   \n",
+       "9           Alba Iulia                  48.8           NaN   \n",
+       "10            Albacete                  59.3           NaN   \n",
+       "11  Alcalá de Guadaíra                  63.3           NaN   \n",
+       "12   Alcalá de Henares                  59.1           NaN   \n",
+       "13               Alcoy                  66.5           NaN   \n",
+       "14         Alessandria                  71.4           NaN   \n",
+       "15           Algeciras                  63.0           NaN   \n",
+       "16    Alicante/Alacant                  62.9           NaN   \n",
+       "17             Alkmaar                  73.0           NaN   \n",
+       "18              Almelo                  72.8           NaN   \n",
+       "19              Almere                  58.8           NaN   \n",
        "\n",
        "    Avg_annual_rent_per_m2  Avg_living_area_m2_per_person  \\\n",
        "0                      NaN                          49.30   \n",
@@ -1802,7 +1812,7 @@
     }
    ],
    "source": [
-    "df.head(20)"
+    "df.head(10)"
    ]
   },
   {
