--- a/notebooks/02_data_exploration_and_processing.ipynb
+++ b/notebooks/02_data_exploration_and_processing.ipynb
@@ -545,7 +545,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\wrons\\AppData\\Local\\Temp\\ipykernel_31740\\2914187182.py:10: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "C:\\Users\\wrons\\AppData\\Local\\Temp\\ipykernel_27704\\2914187182.py:10: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  .apply(lambda x: x.drop(columns='pop_group', errors='ignore')\n"
      ]
     }
@@ -762,7 +762,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4360b3f5fbbc4046bc37aa39612c5a17",
+       "model_id": "7c58d5242b2a4857acdbd69ecea9f501",
        "version_major": 2,
        "version_minor": 0
       },
@@ -827,29 +827,7 @@
    "source": [
     "## Ocena przydatności zmiennych do imputacji braków danych\n",
     "\n",
-    "W procesie przygotowania danych dokonano selekcji zmiennych pod kątem możliwości sensownej imputacji braków. Kryterium stanowiły: charakter zmiennej, stabilność rozkładu, interpretowalność wartości oraz możliwość wiarygodnego modelowania braków na podstawie pozostałych obserwacji.\n",
-    "\n",
-    "<b>Zmienne nadające się do imputacji</b>\n",
-    "\n",
-    "Do imputacji zakwalifikowano przede wszystkim zmienne demograficzne, wskaźniki zdrowia oraz dane z rynku pracy. Są to zmienne o charakterze strukturalnym, relatywnie stabilne w czasie oraz silnie skorelowane zarówno między sobą, jak i z wielkością populacji miasta.\n",
-    "\n",
-    "W szczególności obejmuje to:\n",
-    "- zmienne demograficzne (Population, Median_age, Age_dependency_ratio, Young_dependency_ratio, Old_dependency_ratio, Share_foreigners),\n",
-    "- wskaźniki zdrowia (Crude_birth_rate, Crude_death_rate, Infant_mortality_rate, Deaths_under_65_circ_resp_per_100k, Road_deaths_per_10000),\n",
-    "- dane z rynku pracy i struktury społecznej (Unemployment_rate, Share_students_higher_edu).\n",
-    "\n",
-    "Rozkłady tych zmiennych cechują się umiarkowaną zmiennością, braki danych nie przekraczają poziomu uniemożliwiającego modelowanie (ok. 10–20%), a wartości skrajne są w większości przypadków interpretowalne. Co istotne, zmienne te opisują fundamentalne cechy populacji miejskich, które można wiarygodnie estymować na podstawie pozostałych informacji (np. wieku populacji, struktury zależności demograficznych czy poziomu rozwoju społeczno-ekonomicznego). Z tego względu imputacja metodami wielowymiarowymi (np. MICE) nie prowadzi do istotnego zniekształcenia struktury danych.\n",
-    "\n",
-    "<b>Zmienne nienadające się do imputacji</b>\n",
-    "\n",
-    "Pozostałe zmienne zostały wykluczone z imputacji i odrzucone z dalszej analizy. Dotyczy to w szczególności:\n",
-    "- zmiennych opisujących wartości absolutne silnie zależne od skali miasta, takich jak Municipal_waste_1000t czy Deaths_under_65_circulatory_respiratory. Ich rozkłady charakteryzują się bardzo dużą zmiennością oraz ekstremalnymi wartościami maksymalnymi, co wskazuje na silną zależność od wielkości populacji i lokalnych systemów raportowania. Imputacja w takiej postaci prowadziłaby do sztucznego wygładzania danych i utraty informacji o rzeczywistych różnicach między miastami.\n",
-    "- zmiennych infrastrukturalnych i sektorowych (Beds_per_1000, Tourist_nights_per_resident), które wykazują wysoką heterogeniczność wynikającą z odmiennych modeli rozwoju miast. W ich przypadku brak danych często nie jest losowy (np. brak sektora turystycznego), a wartość zero nie jest jednoznaczna z brakiem obserwacji, co uniemożliwia wiarygodną imputację.\n",
-    "- zmiennych związanych z gospodarką odpadami (Waste_prod_rate), które mimo przeliczenia na miary względne nadal wykazują silne zróżnicowanie i znaczną liczbę braków. Różnice w definicjach, metodologii pomiaru oraz systemach raportowania pomiędzy krajami powodują, że imputacja mogłaby wprowadzić więcej szumu niż informacji.\n",
-    "\n",
-    "<b>Podsumowanie decyzji</b>\n",
-    "\n",
-    "W efekcie do dalszej analizy i imputacji pozostawiono wyłącznie zmienne demograficzne, zdrowotne oraz związane z rynkiem pracy, dla których możliwe jest wiarygodne odtworzenie brakujących wartości. Zmienne infrastrukturalne, sektorowe oraz o silnie zależnej od skali interpretacji zostały odrzucone, aby uniknąć wprowadzania sztucznej struktury i błędnych wniosków w kolejnych etapach analizy."
+    "W procesie eksploracji danych dokonano selekcji zmiennych pod kątem możliwości wiarygodnej imputacji braków. Do dalszej analizy pozostawiono zmienne demograficzne, zdrowotne oraz związane z rynkiem pracy, charakteryzujące się relatywnie stabilnymi rozkładami oraz umiarkowanym poziomem braków danych. Zmienne infrastrukturalne, sektorowe oraz silnie zależne od skali miasta zostały odrzucone, ponieważ ich braki danych nie mają charakteru losowego lub poziom braków uniemożliwia sensowną imputację bez wprowadzania sztucznej struktury do zbioru."
    ]
   },
   {
@@ -1155,43 +1133,7 @@
    "id": "5e165827-f3ad-42d2-8333-80be216b69ce",
    "metadata": {},
    "source": [
-    "Zmienne uzupełnione średnią:\n",
-    "\n",
-    "Infant_mortality_rate – Braków jest bardzo mało (~1%), a zmienna nie wykazuje silnych zależności z innymi cechami. Uzupełnienie średnią jest szybkie i nie zniekształca danych.\n",
-    "\n",
-    "Crude_birth_rate – Braki praktycznie zerowe, rozkład umiarkowany; średnia dobrze reprezentuje typową wartość.\n",
-    "\n",
-    "Crude_death_rate – Braki praktycznie zerowe, rozkład umiarkowany; średnia jest wystarczająca\n",
-    "\n",
-    "Zmienne uzupełnione medianą:\n",
-    "\n",
-    "Median_age – Braków niewiele (~1%). Mediana jest odporna na wartości odstające i dobrze zachowuje typowy wiek w mieście.\n",
-    "\n",
-    "Zmienne uzupełnione KNN:\n",
-    "\n",
-    "Share_foreigners – Niewielka liczba braków (~4%). Wartości zależą od specyfiki miasta i jego otoczenia, więc imputacja oparta na podobnych miastach (KNN) jest naturalna.\n",
-    "\n",
-    "Unemployment_rate – Braki ~17%. Stopa bezrobocia jest silnie powiązana z innymi zmiennymi demograficznymi i ekonomicznymi; KNN wykorzystuje podobieństwo między miastami, co pozwala zachować lokalne zależności.\n",
-    "\n",
-    "Zmienne uzupełnione MICE:\n",
-    "\n",
-    "Avg_living_area_m2_per_person – Braki ~27%. Zależności z innymi cechami demograficznymi (populacja, struktura wiekowa) pozwalają MICE dobrze przewidzieć brakujące wartości.\n",
-    "\n",
-    "Road_deaths_per_10000 – Braki ~11%. Zależna od populacji, liczby samochodów i innych czynników miejskich; MICE pozwala modelować te powiązania.\n",
-    "\n",
-    "Share_students_higher_edu – Braki ~14%. Silnie powiązana z wiekiem populacji i strukturą miasta; MICE zachowuje te zależności.\n",
-    "\n",
-    "Deaths_under_65_circ_resp_per_100k – Braki ~5%. Zależna od innych zmiennych demograficznych i zdrowotnych, MICE jest bardziej precyzyjne niż średnia.\n",
-    "\n",
-    "Zmienne uzupełnione MICE z transformacją log:\n",
-    "\n",
-    "Cars_per_1000 – Rozkład bardzo skośny (72 → 4620), log-transformacja stabilizuje imputację.\n",
-    "\n",
-    "Population – Silnie skośny rozkład (37 tys → 10 mln), log-transformacja pozwala MICE modelować zależności bez nadmiernego wpływu ekstremalnych wartości.\n",
-    "\n",
-    "Share_students_higher_edu – Rozkład bardzo szeroki (0 → 583), log pozwala uniknąć „rozciągnięcia” imputacji przy dużych wartościach.\n",
-    "\n",
-    "Road_deaths_per_10000 – Rozkład skośny z wieloma wartościami blisko zera, log1p może poprawić imputację braków przy MICE."
+    "Braki danych uzupełniono z wykorzystaniem kilku metod imputacji, dobranych w zależności od charakteru zmiennych. Dla zmiennych z marginalnym udziałem braków zastosowano imputację średnią lub medianą. Zmienne zależne od podobieństwa pomiędzy miastami imputowano metodą KNN, natomiast dla cech o bardziej złożonych zależnościach wielowymiarowych użyto imputacji iteracyjnej (MICE). W przypadku zmiennych o silnie skośnych rozkładach zastosowano dodatkowo transformację logarytmiczną, co pozwoliło ustabilizować proces imputacji i ograniczyć wpływ wartości ekstremalnych."
    ]
   },
   {
@@ -2282,11 +2224,11 @@
    "id": "5c4606dc-c379-413c-8bc0-e774fbb96c8c",
    "metadata": {},
    "source": [
-    "W zbiorze danych nie zaobserwowano bardzo silnych korelacji pomiędzy zmiennymi liczbowymi (|r| > 0.8), co oznacza, że większość cech wnosi odrębną informację do analizy. Wyjątkiem jest jednak blok demograficzny, obejmujący zmienne opisujące wiek populacji i wskaźniki zależności wiekowej. Występują w nim umiarkowanie silne korelacje (r ≈ 0.5–0.7), co mogłoby spowodować, że model K-means nadmiernie skupi się na tym aspekcie kosztem pozostałych wymiarów miast, takich jak edukacja, rynek pracy czy migracje. W celu zbalansowania wpływu zmiennych na klasyfikację część cech demograficznych zostaje usunięta, pozostawiając jedynie te, które najlepiej reprezentują strukturę populacji.\n",
+    "W zbiorze danych nie stwierdzono bardzo silnych korelacji pomiędzy zmiennymi liczbowymi (|r| > 0.8), co sugeruje, że większość cech wnosi niezależną informację do analizy. Wyjątkiem są zmienne demograficzne opisujące strukturę wieku populacji, pomiędzy którymi występują umiarkowane korelacje (r ≈ 0.5–0.7). Aby uniknąć nadmiernego wpływu tego obszaru na wynik klasteryzacji, część silnie powiązanych zmiennych demograficznych została usunięta.\n",
     "\n",
-    "Ponadto, pomimo braku intuicyjnego powiązania przyczynowo-skutkowego między średnią powierzchnią mieszkania na osobę a śmiertelnością z powodu chorób układu oddechowego osób poniżej 65 roku życia, zmienna dotycząca śmiertelności zostaje również wykluczona z klasteryzacji. Wysoka korelacja między tymi zmiennymi (-0.65) może wynikać z czynników zewnętrznych – np. mniejsze mieszkania w centrach dużych miast, gdzie również występuje gorsza jakość powietrza – co wprowadzałoby niepożądaną redundancję do modelu.\n",
+    "Dodatkowo wykluczono zmienną dotyczącą śmiertelności osób poniżej 65 roku życia z powodu chorób układu krążenia i oddechowego, która wykazywała wysoką korelację ze średnią powierzchnią mieszkania na osobę. Zależność ta prawdopodobnie wynika z czynników pośrednich, takich jak gęstość zabudowy i środowisko miejskie, a jej uwzględnienie prowadziłoby do niepożądanej redundancji.\n",
     "\n",
-    "W ten sposób pozostałe zmienne, obejmujące różne aspekty życia miejskiego, mają równy wpływ na identyfikację typów miast przez model K-means, co zapewnia bardziej zrównoważoną i interpretowalną segmentację."
+    "W rezultacie pozostawiony zestaw cech obejmuje zróżnicowane aspekty funkcjonowania miast i zapewnia bardziej zbalansowany oraz interpretowalny wynik klasteryzacji metodą K-means."
    ]
   },
   {
@@ -2558,10 +2500,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "954b535f-737b-4311-85bd-383f12716603",
+   "id": "ac01f7c3-6425-493d-b0ee-1d4d8573dbea",
    "metadata": {},
    "source": [
-    "# DATA STANDARIZATION"
+    "# DATA STANDARIZATION\n",
+    "\n",
+    "Dane zostały ustandaryzowane (średnia = 0, odchylenie standardowe = 1), ponieważ algorytm K-means opiera się na odległościach i jest wrażliwy na różnice skali pomiędzy zmiennymi."
    ]
   },
   {
