--- a/notebooks/03_modeling.ipynb
+++ b/notebooks/03_modeling.ipynb
@@ -1069,9 +1069,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "01e024ce-7dc7-49d8-a66e-184f76be54a7",
+   "metadata": {},
+   "source": [
+    "Szczegółowa analiza otrzymanych wyników w dokumentacji."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8188af87-c871-466d-9ace-b515f4cefdda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip freeze > requirements.txt"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44c1aa67-baef-4ce8-be8a-c2d7bfb1c94e",
+   "id": "db65a132-a45c-413c-918d-cf15334a615f",
    "metadata": {},
    "outputs": [],
    "source": []
