Creating venv and updating requirements.txt

--- a/notebooks/01_data_preprocessing.ipynb
+++ b/notebooks/01_data_preprocessing.ipynb
@@ -1345,8 +1345,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "bdae935b-07df-4553-bc68-d075f0732c34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numpy==2.4.0\n",
+      "pandas==2.3.3\n",
+      "scikit-learn - NIE ZAINSTALOWANY\n",
+      "matplotlib==3.10.8\n",
+      "seaborn==0.13.2\n",
+      "ipywidgets==8.1.8\n",
+      "ipython - NIE ZAINSTALOWANY\n",
+      "ipykernel==7.1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# lista bibliotek, które chcesz sprawdzić\n",
+    "packages = [\"numpy\", \"pandas\", \"scikit-learn\", \"matplotlib\", \"seaborn\", \"ipywidgets\", \"ipython\", \"ipykernel\"]\n",
+    "\n",
+    "for pkg in packages:\n",
+    "    try:\n",
+    "        # dynamiczny import pakietu\n",
+    "        module = __import__(pkg)\n",
+    "        print(f\"{pkg}=={module.__version__}\")\n",
+    "    except ImportError:\n",
+    "        print(f\"{pkg} - NIE ZAINSTALOWANY\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79d5e5db-f792-47fd-95d2-ac412a5e1411",
    "metadata": {},
    "outputs": [],
    "source": []
