--- a/notebooks/03_modeling.ipynb
+++ b/notebooks/03_modeling.ipynb
@@ -371,7 +371,7 @@
    "id": "31ed8547-d784-4878-9f09-7fc3e0df8a72",
    "metadata": {},
    "source": [
-    "## Grupowanie metodą KNN"
+    "## Grupowanie metodą K-means"
    ]
   },
   {
@@ -1085,14 +1085,6 @@
    "source": [
     "# !pip freeze > requirements.txt"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db65a132-a45c-413c-918d-cf15334a615f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
